Add new HTML pages and update SCSS structure for improved organization

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+//colores
 $primary-color: #e82933;
 $primary-hover: #f5666b;
 $primary-active: #c6272b;
@@ -5,4 +6,6 @@ $text-dark: #171212;
 $text-muted: #876363;
 $text-gray: #555555;
 $bg-light: #ffffff;
-$font-main: 'Plus Jakarta Sans', sans-serif;
+
+//fuentes
+$font-main: "Plus Jakarta Sans", sans-serif;
