--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,10 +1,10 @@
-@use "sass/base/_variables.scss";
+@use "abstracts/variables";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font: variables.$font-main;
+  font-family: variables.$font-main;
 }
 
 body {
