--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,3 +1,4 @@
+@use "../abstracts/variables";
 
 .footer {
   width: 100%;
@@ -6,8 +7,8 @@
   flex-direction: column;
   align-items: center;
   gap: 24px;
-  font-family: $font-main;
-  background-color: $bg-light;
+  font-family: variables.$font-main;
+  background-color: variables.$bg-light;
 
   &__links {
     display: flex;
@@ -18,20 +19,20 @@
 
   &__link {
     text-decoration: none;
-    color: $text-muted;
+    color: variables.$text-muted;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
     transition: color 0.2s ease;
 
     &:hover {
-      color: $text-dark;
+      color: variables.$text-dark;
     }
   }
 
   &__copy {
     font-size: 14px;
-    color: $text-muted;
+    color: variables.$text-muted;
     text-align: center;
   }
 }
