--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,7 @@
-
 @use "abstracts/variables";
 @use "base/reset";
-@use "component/footer";
-@use "component/navbar";
+@use "components/footer";
+@use "components/nav";
 @use "pages/home";
 @use "pages/about";
 @use "pages/catalog";
