--- a/sass/style.css
+++ b/sass/style.css
@@ -3,8 +3,8 @@
  * 1 | @use "abstracts/variables";
  *   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  *   '
- *   sass/base/_reset.scss 1:1  @use
- *   sass/style.scss 2:1        root stylesheet */
+ *   sass\base\_reset.scss 1:1  @use
+ *   sass\style.scss 2:1        root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -14,5 +14,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 1 \2502  @use \"abstracts/variables\";\a   \2502  ^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   sass/base/_reset.scss 1:1  @use\a   sass/style.scss 2:1        root stylesheet";
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 1 \2502  @use \"abstracts/variables\";\d\a   \2502  ^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   sass\\base\\_reset.scss 1:1  @use\a   sass\\style.scss 2:1        root stylesheet";
 }
