Add catalog page layout and styling with navigation and product sections

--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -9,6 +9,7 @@
   border-bottom: 1px solid #e5e8eb;
   box-sizing: border-box;
   width: 100%;
+  font-family: variables.$font-main;
 
   &__left,
   &__logo-group,
