--- a/sass/style.css
+++ b/sass/style.css
@@ -50,6 +50,7 @@ body {
   border-bottom: 1px solid #e5e8eb;
   box-sizing: border-box;
   width: 100%;
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 .navbar__left, .navbar__logo-group, .navbar__menu, .navbar__right, .navbar__search, .navbar__cart, .navbar__user {
   display: flex;
