--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,8 +1,9 @@
-@use '../abstracts/variables' as *;
+@use '../abstracts/variables';
 
 body {
-  background-color: $bg-light;
+  background-color: variables.$bg-light;
   overflow-x: hidden;
+  font-family: variables.$font-main;
 }
 
 // === HERO ===
@@ -58,7 +59,7 @@ body {
     font-size: 48px;
     line-height: 60px;
     letter-spacing: -2px;
-    color: $bg-light;
+    color: variables.$bg-light;
     z-index: 2;
   }
 
@@ -70,7 +71,7 @@ body {
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    color: $bg-light;
+    color: variables.$bg-light;
     z-index: 2;
   }
 
@@ -82,8 +83,8 @@ body {
     max-width: 480px;
     height: 48px;
     padding: 0 20px;
-    background-color: $primary-color;
-    color: $bg-light;
+    background-color: variables.$primary-color;
+    color: variables.$bg-light;
     font-weight: 700;
     font-size: 16px;
     border: none;
@@ -93,11 +94,11 @@ body {
     z-index: 2;
 
     &:hover {
-      background-color: $primary-hover;
+      background-color: variables.$primary-hover;
     }
 
     &:active {
-      background-color: $primary-active;
+      background-color: variables.$primary-active;
     }
   }
 }
@@ -122,7 +123,7 @@ body {
     font-weight: 700;
     font-size: 22px;
     line-height: 28px;
-    color: $text-dark;
+    color: variables.$text-dark;
   }
 
   &__products {
@@ -155,14 +156,14 @@ body {
     margin-top: 12px;
     font-size: 16px;
     font-weight: 600;
-    color: $text-dark;
+    color: variables.$text-dark;
   }
 
   &__card-description {
     margin-top: 4px;
     font-size: 14px;
     font-weight: 400;
-    color: $text-gray;
+    color: variables.$text-gray;
     line-height: 20px;
   }
 }
@@ -185,7 +186,7 @@ body {
     font-size: 22px;
     font-weight: 700;
     line-height: 28px;
-    color: $text-dark;
+    color: variables.$text-dark;
     margin-bottom: 16px;
   }
 
@@ -218,6 +219,6 @@ body {
     margin-top: 12px;
     font-size: 14px;
     font-weight: 500;
-    color: $text-dark;
+    color: variables.$text-dark;
   }
 }
