--- a/sass/style.css
+++ b/sass/style.css
@@ -134,6 +134,7 @@ body {
 body {
   background-color: #ffffff;
   overflow-x: hidden;
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 .hero {
