Add catalog container styles for layout and alignment

--- a/sass/pages/_catalog.scss
+++ b/sass/pages/_catalog.scss
@@ -4,3 +4,10 @@
   background-color: variables.$bg-light;
   font-family: variables.$font-main;
 }
+
+.catalog__container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
