Refactor catalog styles for improved layout and organization.

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $text-dark: #171212;
 $text-muted: #876363;
 $text-gray: #555555;
 $bg-light: #ffffff;
+$bg-button: #f5f0f0;
 
 //fuentes
 $font-main: "Plus Jakarta Sans", sans-serif;
