--- a/sass/pages/_catalog.scss
+++ b/sass/pages/_catalog.scss
@@ -1,13 +1,213 @@
 @use "../abstracts/variables";
 
-.catalog {
+body {
   background-color: variables.$bg-light;
   font-family: variables.$font-main;
+  margin: 0;
+  padding: 0;
+  display: block;
 }
 
-.catalog__container {
-  width: 100%;
+.catalog {
   display: flex;
   flex-direction: column;
+  padding: 20px 160px;
   align-items: center;
+  max-width: 1280px;
+  margin: 0 auto;
+
+  &-header {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+  }
+
+  &__title h1 {
+    color: variables.$text-dark;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 40px;
+    padding: 16px 0;
+    margin: 0;
+  }
+}
+
+// Breadcrumbs
+
+.breadcrumbs {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 16px 0;
+
+  &__list {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 8px;
+    list-style: none;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    padding: 0;
+    margin: 0;
+  }
+
+  &__item,
+  &__link,
+  p {
+    color: variables.$text-muted;
+    text-decoration: none;
+  }
+
+  &__link--current {
+    color: variables.$text-dark;
+    pointer-events: none;
+    cursor: default;
+  }
+}
+
+//Header Title
+.catalog-header__title {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  width: 100%;
+  padding: 16px 0;
+  color: variables.$text-dark;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 45px;
+}
+// Filter Buttons
+
+.filter-buttons {
+  display: flex;
+  padding: 12px 0;
+  gap: 12px;
+
+  &__button {
+    height: 32px;
+    padding: 0 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    background-color: variables.$bg-button;
+    border-radius: 8px;
+    border: none;
+    font-family: variables.$font-main;
+    font-size: 14px;
+    cursor: pointer;
+  }
+}
+
+// Product Sections
+
+.product-section {
+  &__title {
+    padding: 16px 0;
+    width: 100%;
+    margin: 0;
+  }
+
+  h2 {
+    color: variables.$text-dark;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 23px;
+  }
+
+  &__cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 12px;
+    padding: 16px 0;
+    width: 100%;
+  }
+}
+
+// Product Card
+
+.product-card {
+  display: flex;
+  flex-direction: column;
+  width: 223px;
+  padding-bottom: 12px;
+  gap: 12px;
+
+  &__picture {
+    border-radius: 8px;
+    overflow: hidden;
+    height: 297px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  }
+
+  &__info {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+  }
+
+  &__title {
+    color: variables.$text-dark;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+  }
+
+  &__price {
+    color: variables.$text-muted;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+  }
+}
+
+// Pagination
+
+.pagination {
+  display: flex;
+  padding: 16px 0;
+  justify-content: center;
+  gap: 12px;
+  width: 100%;
+
+  &__button {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: variables.$bg-light;
+    border: none;
+    color: variables.$text-dark;
+    font-size: 14px;
+    font-weight: 400;
+    cursor: pointer;
+    padding: 0;
+  }
+
+  img {
+    width: 18px;
+    height: 18px;
+  }
+
+  &__button--current {
+    background-color: rgba(variables.$text-muted, 0.1);
+    border-radius: 20px;
+  }
 }
